[gd_scene load_steps=21 format=3 uid="uid://d1l4r13olniiw"]

[ext_resource type="Script" uid="uid://bjgoaoktbt0sq" path="res://boss_death_particles.gd" id="1_ngp7l"]
[ext_resource type="AudioStream" uid="uid://duges1gu2j4u" path="res://explosion-47163 (1).mp3" id="2_8jj6q"]

[sub_resource type="Curve" id="Curve_56o4k"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_guyfc"]
curve = SubResource("Curve_56o4k")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ok76u"]
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_guyfc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8x4am"]
albedo_color = Color(0.141176, 0.0352941, 0.945098, 1)
emission_enabled = true
emission = Color(0.141176, 0.0352941, 0.945098, 1)
emission_energy_multiplier = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_odcr7"]
material = SubResource("StandardMaterial3D_8x4am")
radius = 0.2
height = 0.4
rings = 16

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rxeh0"]
albedo_color = Color(0, 0.901961, 1, 1)
emission_enabled = true
emission = Color(0, 0.901961, 1, 1)
emission_energy_multiplier = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_1t67l"]
material = SubResource("StandardMaterial3D_rxeh0")
radius = 0.2
height = 0.4
rings = 16

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hxlso"]
albedo_color = Color(0.186924, 4.34621e-05, 0.20493, 1)
emission_enabled = true
emission = Color(0.188235, 0, 0.203922, 1)
emission_energy_multiplier = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_q3rso"]
material = SubResource("StandardMaterial3D_hxlso")
radius = 0.2
height = 0.4
rings = 16

[sub_resource type="Curve" id="Curve_74fpe"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_soaq5"]
curve = SubResource("Curve_74fpe")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cuori"]
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_soaq5")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u0c7t"]
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_wqbeq"]
material = SubResource("StandardMaterial3D_u0c7t")
radius = 0.2
height = 0.4
rings = 16

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ngp7l"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.176471)

[sub_resource type="Animation" id="Animation_8jj6q"]
resource_name = "Inflate"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGSphere3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.001, 0.001, 0.001), Vector3(10, 10, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CSGSphere3D:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.176471), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_p6ito"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGSphere3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CSGSphere3D:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.176471)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m1jhx"]
_data = {
&"Inflate": SubResource("Animation_8jj6q"),
&"RESET": SubResource("Animation_p6ito")
}

[node name="PlayerDeathParticles" type="Node3D"]
script = ExtResource("1_ngp7l")

[node name="GPUParticles3D1" type="GPUParticles3D" parent="."]
emitting = false
amount = 64
one_shot = true
explosiveness = 0.85
process_material = SubResource("ParticleProcessMaterial_ok76u")
draw_pass_1 = SubResource("SphereMesh_odcr7")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="."]
emitting = false
amount = 64
one_shot = true
explosiveness = 0.85
process_material = SubResource("ParticleProcessMaterial_ok76u")
draw_pass_1 = SubResource("SphereMesh_1t67l")

[node name="GPUParticles3D3" type="GPUParticles3D" parent="."]
emitting = false
amount = 64
one_shot = true
explosiveness = 0.85
process_material = SubResource("ParticleProcessMaterial_ok76u")
draw_pass_1 = SubResource("SphereMesh_q3rso")

[node name="GPUParticles3D4" type="GPUParticles3D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 0.85
process_material = SubResource("ParticleProcessMaterial_cuori")
draw_pass_1 = SubResource("SphereMesh_wqbeq")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8jj6q")
bus = &"SFX"

[node name="CSGSphere3D" type="CSGSphere3D" parent="."]
rings = 12
material = SubResource("StandardMaterial3D_ngp7l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_m1jhx")
}
autoplay = "Inflate"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
